--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -18,8 +18,8 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: 构建Maven项目
-        run: mvn -B package --file pom.xml
+      - name: 构建Gradle项目
+        run: ./gradlew build
       - name: 上传构建
         uses: actions/upload-artifact@v2
         with:
@@ -27,10 +27,10 @@ jobs:
           name: PlayerIsWorldPro
           # optional
           # A file, directory or wildcard pattern that describes what to upload
-          path: target/*.jar
+          path: build/libs/*.jar
       - name: 压缩文件
         run: |
-          zip -r PlayerIsWorldPro.zip target/*.jar
+          zip -r PlayerIsWorldPro.zip build/libs/*.jar
 #      - name: Upload to release
 #        uses: JasonEtco/upload-to-release@v0.1.1
 #        with:
